GetAllUsers Endpoint + postmanfile
